--- a/flex-projeto/index.html
+++ b/flex-projeto/index.html
@@ -15,7 +15,7 @@
             <div><h1>FlexTurismos</h1></div>
             <ul class="list-items">
                 <li><a href="#quem-somos">Quem Somos</a></li>
-                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#servicos">Serviços.</a></li>
                 <li><a href="#planos">Planos</a></li>
             </ul>
         </div>
